fix: remove the summary

--- a/cv.tex
+++ b/cv.tex
@@ -43,16 +43,16 @@
     }
 \end{minipage}
 
-\vspace{20mm} % Adjust the space as needed 
+% \vspace{20mm} % Adjust the space as needed 
 
-%
-% Section: Professional Summary
-%
-\section*{\centering\underline{PROFESSIONAL SUMMARY}}
-\begin{itemize}[noitemsep, nolistsep]
-    \item[] Experienced Computer Science researcher with a strong background in distributed machine learning systems, blockchain technologies, and collaborative learning. Proven track record in academia and industry with multiple publications and contributions to significant projects. Looking to leverage my technical expertise and research skills in a challenging environment.
-\end{itemize}
-\vspace{20mm} % Adjust the space as needed 
+% %
+% % Section: Professional Summary
+% %
+% \section*{\centering\underline{PROFESSIONAL SUMMARY}}
+% \begin{itemize}[noitemsep, nolistsep]
+%     \item[] Experienced Computer Science researcher with a strong background in distributed machine learning systems, blockchain technologies, and collaborative learning. Proven track record in academia and industry with multiple publications and contributions to significant projects. Looking to leverage my technical expertise and research skills in a challenging environment.
+% \end{itemize}
+% \vspace{20mm} % Adjust the space as needed 
 
 % -----------------------
 % Section: Education
