:wrench: update cv

--- a/cv.tex
+++ b/cv.tex
@@ -37,7 +37,7 @@
     {\small\raggedright
     \begin{tabular}{l@{: }l}
     Email & \href{mailto:dixingxu@gmail.com}{dixingxu@gmail.com} \\
-    Web & \href{https://blog.dex.moe}{https://blog.dex.moe} \\
+    Blog & \href{https://blog.dex.moe}{https://blog.dex.moe} \\
     \end{tabular}\\
     (Last update: \today)
     }
@@ -126,9 +126,9 @@
 \subsection*{\centering{Industry}}
 \begin{itemize}[leftmargin=0em, noitemsep, nolistsep]
     \setlength\itemsep{1em}
-    \item[] \large\textbf{HexTrust} \hfill Hong Kong
+    \item[] \large\textbf{HexTrust} \hfill Remote
     \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-        \item[] {Software Development Engineer} \hfill \textit{2022.04-PRESENT}
+        \item[] {Software Development Engineer} \hfill \textit{2022.04-2024.08}
          \begin{itemize}
             \small
             \item[--] HexAdmin Backend Development (Golang)
@@ -162,7 +162,7 @@
                 \small
                 \item[--] Mentor for \textit{Add interactive examples to Fabric Python SDK} \href{https://wiki.hyperledger.org/pages/viewpage.action?pageId=29035315}{\textcolor{blue}{[Project]}}
             \end{itemize}
-            \item[] Software Maintainer\hfill \textit{2018.09-PRESENT}
+            \item[] Software Maintainer\hfill \textit{2018.09-2024.06}
              \begin{itemize}
                 \small
                 \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
