:bug: fix my services

--- a/cv.tex
+++ b/cv.tex
@@ -228,12 +228,12 @@
 % -----------------------
 % Section: Services
 %
-\section*{\centering\underline{SERVICES}}
-\noindent\textbf{Student Member}, IEEE Computer Society (IEEE)\\
-\noindent\textbf{Reviewer}:
-\begin{itemize}[noitemsep, nolistsep]
-    \item[$\circ$] IEEE Internet of Things Journal
-\end{itemize}
+% \section*{\centering\underline{SERVICES}}
+% \noindent\textbf{Student Member}, IEEE Computer Society (IEEE)\\
+% \noindent\textbf{Reviewer}:
+% \begin{itemize}[noitemsep, nolistsep]
+%     \item[$\circ$] IEEE Internet of Things Journal
+% \end{itemize}
 
 \end{document}
 
