:construction: add build html

--- a/cv.tex
+++ b/cv.tex
@@ -36,7 +36,7 @@
 \begin{minipage}[t]{0.45\textwidth}
     {\small\raggedright
     \begin{tabular}{l@{: }l}
-    Email & \href{mailto:dixingxu@gmail.com}{dixingxu@gmail.com} \\
+    Email & \href{mailto:i@dex.moe}{i@dex.moe} \\
     Blog & \href{https://blog.dex.moe}{https://blog.dex.moe} \\
     \end{tabular}\\
     (Last update: \today)
