:wrench: cv update & trim whitespaces

--- a/cv.tex
+++ b/cv.tex
@@ -2,7 +2,7 @@
 
 % English
 \usepackage[english]{babel}
-% UTF8 compliant 
+% UTF8 compliant
 \usepackage[utf8]{inputenc}
 % custom header
 % \usepackage{fancyhdr}
@@ -45,34 +45,34 @@
     }
 \end{minipage}
 
-% \vspace{20mm} % Adjust the space as needed 
+% \vspace{20mm} % Adjust the space as needed
 
-%
-% Section: Professional Summary
-%
-\section*{\centering\underline{PROFESSIONAL SUMMARY}}
-\begin{itemize}[noitemsep, nolistsep]
-    \item[] Experienced Computer Science researcher with a strong background in distributed machine learning systems, blockchain technologies, and collaborative learning. Proven track record in academia and industry with multiple publications and contributions to significant projects. Looking to leverage my technical expertise and research skills in a challenging environment.
-\end{itemize}
-\vspace{20mm} % Adjust the space as needed 
+% %
+% % Section: Professional Summary
+% %
+% \section*{\centering\underline{PROFESSIONAL SUMMARY}}
+% \begin{itemize}[noitemsep, nolistsep]
+%     \item[] Experienced Computer Science researcher with a strong background in distributed machine learning systems, blockchain technologies, and collaborative learning. Proven track record in academia and industry with multiple publications and contributions to significant projects. Looking to leverage my technical expertise and research skills in a challenging environment.
+% \end{itemize}
+% \vspace{20mm} % Adjust the space as needed
 
 % -----------------------
 % Section: Education
-% %
-% \section*{\centering\underline{EDUCATION}}
-% % \large \item[2020] \textbf{University of Liverpool} \hfill Liverpool, UK
-% %     \begin{itemize}[noitemsep, nolistsep]
-% %         \item[] \textit{BSc (Hons) Information and Computing Sciences (2:1)}
-% %     \end{itemize} 
-% \noindent\textit{2020} \large\textbf{Xi'an Jiaotong-Liverpool University \& University of Liverpool} \hfill Suzhou, China
-% \begin{itemize}[noitemsep, nolistsep]
-%     \item[] \textit{BSc (Hons) Information and Computing Sciences (2:1)}
-% \end{itemize} 
-% \vspace{20mm} % Adjust the space as needed 
+%
+\section*{\centering\underline{EDUCATION}}
+% \large \item[2020] \textbf{University of Liverpool} \hfill Liverpool, UK
+%     \begin{itemize}[noitemsep, nolistsep]
+%         \item[] \textit{BSc (Hons) Information and Computing Sciences (2:1)}
+%     \end{itemize}
+\noindent\textit{2020} \large\textbf{Xi'an Jiaotong-Liverpool University \& University of Liverpool} \hfill Suzhou, China
+\begin{itemize}[noitemsep, nolistsep]
+    \item[] \textit{BSc (Hons) Information and Computing Sciences (2:1)}
+\end{itemize}
+\vspace{20mm} % Adjust the space as needed
 
 % -----------------------
 % Section: Work
-% 
+%
 \section*{\centering\underline{WORK EXPERIENCE}}
 % Subsection: Academia
 \subsection*{\centering{Academia}}
@@ -85,7 +85,7 @@
                 \small
                 \item[--] Worked with \href{https://www.comp.hkbu.edu.hk/~chxw/}{Prof. Xiaowen Chu} on distributed machine learning systems and blockchain systems.
              \end{itemize}
-        \end{itemize} 
+        \end{itemize}
     \item[] \large\textbf{Zhejiang University} \hfill Hangzhou, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
             \item[] {Visiting Student Researcher} \hfill \textit{2019.09-2020.03}
@@ -93,7 +93,7 @@
                 \small
                 \item[--] Worked with \href{https://person.zju.edu.cn/en/cp}{Prof. Peng Cheng} on machine learning and security.
              \end{itemize}
-        \end{itemize} 
+        \end{itemize}
     \item[] \large\textbf{Nanyang Technological University} \hfill Singapore
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
             \item[] Research Assistant \hfill \textit{2019.03-2019.08}
@@ -101,7 +101,7 @@
                 \small
                 \item[--] Worked with \href{https://www.ntu.edu.sg/home/tanrui/}{Prof. Rui Tan} on collaborative learning, Internet of Things (IoT) and Privacy.
              \end{itemize}
-        \end{itemize} 
+        \end{itemize}
     \item[] \large\textbf{Xi'an Jiaotong-Liverpool University} \hfill Suzhou, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
             \item[] Research Assistant \hfill \textit{2016.11-2018.08}
@@ -114,7 +114,7 @@
                 \small
                 \item[--] Worked with \href{https://www.xjtlu.edu.cn/en/departments/academic-departments/computer-science-and-software-engineering/staff/steven-guan}{Prof. Steven Guan} on Style Transfer Learning with Generative Adversarial Networks.
              \end{itemize}
-        \end{itemize} 
+        \end{itemize}
     \item[] \large\textbf{National University of Singapore} \hfill Singapore
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
             \item[] Summer Internship \hfill \textit{2016.06-2016.08}
@@ -122,7 +122,7 @@
                 \small
                 \item[--] Worked with \href{https://www.comp.nus.edu.sg/~leonghw/}{Prof. Hon Wei Leong} on course Computational Thinking and Community Detection in Large Graphs.
             \end{itemize}
-        \end{itemize} 
+        \end{itemize}
 \end{itemize}
 % Subsection: Industry
 \subsection*{\centering{Industry}}
@@ -169,7 +169,7 @@
                 \small
                 \item[--] Maintainer of Hyperledger Fabric Python SDK. \href{https://github.com/hyperledger/fabric-sdk-py}{\textcolor{blue}{[Project]}}
              \end{itemize}
-        \end{itemize} 
+        \end{itemize}
 
     \item[] \large\textbf{Research Institute of Beihang University} \hfill Suzhou, China
         \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
@@ -181,7 +181,7 @@
              \end{itemize}
         \end{itemize}
 \end{itemize}
-\vspace{20mm} % Adjust the space as needed 
+\vspace{20mm} % Adjust the space as needed
 
 
 % -----------------------
@@ -203,9 +203,9 @@
 \noindent\textit{2017.11} \textbf{1st Prize, Hack x FDU 2017 Hackathon} \href{https://github.com/dexhunter/hackxfdu-DSharing}{\textcolor{blue}{[Source Code]}}
     \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, leftmargin=5em, parsep=0pt]
         \item Awarded to the top 1 of more than 70 groups from colleges nationwide. \href{https://archive.is/FzYVh}{\textcolor{blue}{[Media(CN)]}}
-        \item Built a decentralized P2P leasing system using blockchain. 
-    \end{itemize} 
-\vspace{20mm} % Adjust the space as needed 
+        \item Built a decentralized P2P leasing system using blockchain.
+    \end{itemize}
+\vspace{20mm} % Adjust the space as needed
 
 
 % -----------------------
@@ -218,14 +218,14 @@
 % \subsection*{\centering{Conference}}
 \noindent\textit{2020} \begin{NoHyper}\bibentry{xu2020lightweight}\end{NoHyper}\\[5mm] % Adjust the space as needed
 \noindent\textit{2019} \begin{NoHyper}\bibentry{zheng2019challenges}\end{NoHyper}
-\vspace{20mm} % Adjust the space as needed 
+\vspace{20mm} % Adjust the space as needed
 
-% ----------------------- 
+% -----------------------
 % Section: Manuscripts
 %
 \section*{\centering\underline{MANUSCRIPTS}}
 \noindent\textit{2017} \begin{NoHyper}\bibentry{jiang2017deep}\end{NoHyper}
-\vspace{20mm} % Adjust the space as needed 
+\vspace{20mm} % Adjust the space as needed
 
 % -----------------------
 % Section: Services
