:wrench: add work experience

--- a/cv.tex
+++ b/cv.tex
@@ -134,7 +134,8 @@
          \begin{itemize}
             \small
             \item[--] HexAdmin Backend Development (Golang)
-            \item[--] HTM(Markets) Backend Development (Rust)
+            \item[--] HTM(Markets) Backend Development (Rust, Golang, NodeJS)
+            \item[--] HTM(Markets) Infrastructure (Terraform, Kubernetes, Nginx)
          \end{itemize}
     \end{itemize}
     \item[] \large\textbf{The Linux Foundation} \hfill Remote
