--- a/cv.tex
+++ b/cv.tex
@@ -16,9 +16,7 @@
 \geometry{letterpaper}
 \usepackage{natbib}
 \usepackage{bibentry}
-\makeatletter\let\saved@bibitem\@bibitem\makeatother
 \usepackage{hyperref}
-\makeatletter\let\@bibitem\saved@bibitem\makeatother
 \usepackage{xcolor}
 \usepackage{enumitem}
 
@@ -115,14 +113,14 @@
                 \item[--] Worked with \href{https://www.xjtlu.edu.cn/en/departments/academic-departments/computer-science-and-software-engineering/staff/steven-guan}{Prof. Steven Guan} on Style Transfer Learning with Generative Adversarial Networks.
              \end{itemize}
         \end{itemize}
-    \item[] \large\textbf{National University of Singapore} \hfill Singapore
-        \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] Summer Internship \hfill \textit{2016.06-2016.08}
-            \begin{itemize}
-                \small
-                \item[--] Worked with \href{https://www.comp.nus.edu.sg/~leonghw/}{Prof. Hon Wei Leong} on course Computational Thinking and Community Detection in Large Graphs.
-            \end{itemize}
-        \end{itemize}
+    % \item[] \large\textbf{National University of Singapore} \hfill Singapore
+    %     \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
+    %         \item[] Summer Internship \hfill \textit{2016.06-2016.08}
+    %         \begin{itemize}
+    %             \small
+    %             \item[--] Worked with \href{https://www.comp.nus.edu.sg/~leonghw/}{Prof. Hon Wei Leong} on course Computational Thinking and Community Detection in Large Graphs.
+    %         \end{itemize}
+    %     \end{itemize}
 \end{itemize}
 % Subsection: Industry
 \subsection*{\centering{Industry}}
@@ -189,22 +187,42 @@
 % Section: Honors & Awards
 %
 \section*{\centering\underline{HONORS \& AWARDS}}
-\noindent\textit{2019.12} \textbf{Hyperledger Diversity Scholarship}\\
-\noindent\textit{2018.09} \textbf{CNCF Diversity Scholarship}\\
+\noindent\textit{2020.05} \textbf{2nd Prize, 2020 XJTLU Block-chain Technology Application Innovation \& Entrepreneurship Challenge}\\[\baselineskip]
+\noindent\textit{2019.12} \textbf{Hyperledger Diversity Scholarship}
+\begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, leftmargin=5em, parsep=0pt]
+    \item attends Hyperledger Global Forum 2020 in Phoenix, AZ
+\end{itemize}
+\noindent\textit{2018.09} \textbf{CNCF Diversity Scholarship}
+\begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, leftmargin=5em, parsep=0pt]
+    \item attends KubeCon + CloudNativeCon China 2018 in Shanghai
+    \item represents Asian students
+    \item recognized for open source contribution
+\end{itemize}
+\vspace{\baselineskip}
 \noindent\textit{2018.09} \textbf{Special Prize (US\$10,000) by QTUM, Wanxiang Blockchain Hackathon} \href{https://github.com/PRIEWIENV/QtumSwap}{\textcolor{blue}{[Source Code]}}
     \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, leftmargin=5em, parsep=0pt]
         \item Awarded to only 1 of more than 20 groups all over the world.
-        \item Implemented atomic swaps between BTC/ERC20/any contract call and QTUM.
+        \item Implemented atomic swap infrastructure between qtum \& BTC, also atomic swamp between qtum and qrc20 tokens
+        \item DApp for house sharing (demo with raspberry pi)
     \end{itemize}
-\noindent\textit{2018.07} \textbf{1st Prize, 2018 EOS Hackathon Hangzhou (Team)} \href{https://github.com/Acappella-dream}{\textcolor{blue}{[Source Code]}}\\
-\noindent\textit{2018.07} \textbf{3rd Prize, 2018 EOS Hackathon Hangzhou (Personal)}\\
-\noindent\textit{2018.07} \textbf{3rd Prize, DoraHacks x BCH Faith Hack}\\
-\noindent\textit{2018.06} \textbf{2nd Prize, 2018 XJTLU \& PNP AI Innovation Hackathon}\\
-\noindent\textit{2018.04} \textbf{2017 IBM Student Innovation Lab Program Award}\\
+\vspace{\baselineskip}
+\noindent\textit{2018.07} \textbf{1st Prize, 2018 EOS Hackathon Hangzhou (Team)} \href{https://github.com/Acappella-dream}{\textcolor{blue}{[Source Code]}}\\[\baselineskip]
+\noindent\textit{2018.07} \textbf{3rd Prize, 2018 EOS Hackathon Hangzhou (Personal)}\\[\baselineskip]
+\noindent\textit{2018.07} \textbf{3rd Prize, DoraHacks x BCH Faith Hack}
+\begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, leftmargin=5em, parsep=0pt]
+    \item Build a decentralized non-fungible token atomic swap protocol for bitcoin cash (compatible with bitcoin)
+\end{itemize}
+\vspace{\baselineskip}
+\noindent\textit{2018.06} \textbf{2nd Prize, 2018 XJTLU \& PNP AI Innovation Hackathon}
+    \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, leftmargin=5em, parsep=0pt]
+        \item Build a tokenized crypto-trading AI platform.
+    \end{itemize}
+\vspace{\baselineskip}
+\noindent\textit{2018.04} \textbf{2017 IBM Student Innovation Lab Program Award}\\[\baselineskip]
 \noindent\textit{2017.11} \textbf{1st Prize, Hack x FDU 2017 Hackathon} \href{https://github.com/dexhunter/hackxfdu-DSharing}{\textcolor{blue}{[Source Code]}}
     \begin{itemize}[noitemsep, topsep=0pt, partopsep=0pt, leftmargin=5em, parsep=0pt]
         \item Awarded to the top 1 of more than 70 groups from colleges nationwide. \href{https://archive.is/FzYVh}{\textcolor{blue}{[Media(CN)]}}
-        \item Built a decentralized P2P leasing system using blockchain.
+        \item Built a decentralized house renting platform using blockchain and IoT. Details: \href{ https://www.hackx.org/projects/169}{\textcolor{blue}{[Project Page]}}
     \end{itemize}
 \vspace{20mm} % Adjust the space as needed
 
