:memo: Update CV

--- a/cv.tex
+++ b/cv.tex
@@ -57,6 +57,7 @@
 % -----------------------
 % Section: Education
 %
+
 \section*{\centering\underline{EDUCATION}}
 % \large \item[2020] \textbf{University of Liverpool} \hfill Liverpool, UK
 %     \begin{itemize}[noitemsep, nolistsep]
@@ -170,15 +171,15 @@
              \end{itemize}
         \end{itemize}
 
-    \item[] \large\textbf{Research Institute of Beihang University} \hfill Suzhou, China
-        \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
-            \item[] Software Development Engineer Internship\hfill \textit{2018.11-2019.06}
-             \begin{itemize}
-                \small
-                \item[--] Develop an application based on Hyperledger Fabric.
-                \item[--] Develop a course about blockchain for undergraduates.
-             \end{itemize}
-        \end{itemize}
+    % \item[] \large\textbf{Research Institute of Beihang University} \hfill Suzhou, China
+    %     \begin{itemize}[noitemsep, nolistsep, leftmargin=0em]
+    %         \item[] Software Development Engineer Internship\hfill \textit{2018.11-2019.06}
+    %          \begin{itemize}
+    %             \small
+    %             \item[--] Develop an application based on Hyperledger Fabric.
+    %             \item[--] Develop a course about blockchain for undergraduates.
+    %          \end{itemize}
+    %     \end{itemize}
 \end{itemize}
 \vspace{20mm} % Adjust the space as needed
 
